header style, fonts, emp list button align fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,10 @@
 .classLogo{
   height: 50px;
   vertical-align: middle;
+  margin-right: 1.5rem;
 }
 .container {
   z-index: 0
-}
-.header {
-  display: flex;
-  justify-content: space-between;
-  /* border: 1px solid lightgray; */
-  border-radius: 5px;
-  background-color: whitesmoke;
-  position: sticky;
-  top: 0;
-  z-index: 5;
-}
-.logo{
-  margin: auto 0;
-}
-.nav-items > ul {
-  display: flex;
-  list-style-type: none;
-}
-.nav-items > ul > li {
-  justify-items: space-between;
-  padding: 10px;
-  float: right;
-  margin: 0%;
 }
 .detailHead{
   margin-bottom: 50px;
